# CircuitPython_KX132

./: .pylintrc  README.rst  kx132.py  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: kx132_acc_range.py  kx132_adp_enabled.py  kx132_output_data_rate.py  kx132_previous_tilt_position_example.py  kx132_simpletest.py  kx132_tap_doubletap_example.py  kx132_tilt_example.py
